再々アップロード

--- a/kadai_014/kadai_014.html
+++ b/kadai_014/kadai_014.html
@@ -9,7 +9,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
 </head>
-<body>
+<body class="decration">
   <h1 class="google-fonts"><span style="color: #a0d8ef;">M</span>Y<span style="color: rgb(255, 192, 203);">P</span>ROFILE</h1>
   <div id="basic">
     <h2 class="heading2">名前</h2>
